# clovo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md~
build-debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  password_checker  test_analyzer  test_generator
data/: sources
include/passcheck/: analyzer.h  generator.h
include/slovo/: export.h  ui.h
src/: analyzer.c  comparison.c  export.c  generator.c  main.c  policy.c  ui.c
tests/: test_analyzer.c
